# MiniDB

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  what_i_need_to_add.txt
data/: employees_backup.csv
docs/: Project Rules.txt  README.md  what_i_need_to_add.txt
src/: condition.cpp  condition.h  database.cpp  database.h  file_io.cpp  file_io.h  main.cpp  utils.cpp  utils.h
